[gd_scene load_steps=9 format=3 uid="uid://byxhjyyaahs6q"]

[ext_resource type="Texture2D" uid="uid://ywdg7xgq7hm8" path="res://assets/Ë£ÖÈ•∞Áâ©ÂõæÁâá/ÈÅìÂÖ∑ËÉåÂåÖ.webp" id="1_mv0g4"]
[ext_resource type="Script" uid="uid://btm2je8pg7rgk" path="res://Script/BigPanel/SpecialFarmPanel.gd" id="1_n2mxy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7i23t"]
bg_color = Color(0.752836, 0.587098, 0.400951, 0.9)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.364706, 0.254902, 0.156863, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20
shadow_color = Color(0.2, 0.15, 0.1, 0.5)
shadow_size = 25
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_CloseButton"]
bg_color = Color(0.8, 0.2, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.15, 0.15, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2mxy"]
bg_color = Color(0.945056, 0.846293, 0.608526, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
shadow_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button_Hover"]
bg_color = Color(0.8, 0.65098, 0.470588, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.45098, 0.364706, 0.254902, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button_Pressed"]
bg_color = Color(0.564706, 0.45098, 0.317647, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.364706, 0.294118, 0.203922, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button_Normal"]
bg_color = Color(0.678431, 0.54902, 0.392157, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.45098, 0.364706, 0.254902, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="SpecialFarmPanel" type="Panel"]
offset_right = 1399.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7i23t")
script = ExtResource("1_n2mxy")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_top = 17.0
offset_right = 1401.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(1, 0.901961, 0.498039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.180392, 0.121569, 0.0745098, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 50
text = "üåæ Á•ûÁßòÂÜúÂú∫Êé¢Á¥¢ üèûÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 1297.0
offset_top = 20.0
offset_right = 1377.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_CloseButton")
theme_override_styles/pressed = SubResource("StyleBoxFlat_CloseButton")
theme_override_styles/normal = SubResource("StyleBoxFlat_CloseButton")
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 116.0
offset_right = 1352.0
offset_bottom = 674.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n2mxy")
horizontal_scroll_mode = 0

[node name="Grid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="FlowerFarm" type="VBoxContainer" parent="ScrollContainer/Grid"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="ScrollContainer/Grid/FlowerFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.180392, 0.121569, 0.0745098, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 35
text = "üå∏ Ëä±ÂçâÂÜúÂú∫ üå∫"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Grid/FlowerFarm"]
layout_mode = 2
texture = ExtResource("1_mv0g4")

[node name="FlowerFarmButton" type="Button" parent="ScrollContainer/Grid/FlowerFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_Button_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_Button_Pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_Button_Normal")
text = "üåªÊ¨£ËµèËä±Âõ≠"

[node name="FruitFarm" type="VBoxContainer" parent="ScrollContainer/Grid"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="ScrollContainer/Grid/FruitFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.180392, 0.121569, 0.0745098, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 35
text = "üçé ÁìúÊûúÈ£òÈ¶ô üçì"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Grid/FruitFarm"]
layout_mode = 2
texture = ExtResource("1_mv0g4")

[node name="FruitFarmButton" type="Button" parent="ScrollContainer/Grid/FruitFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_Button_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_Button_Pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_Button_Normal")
text = "ü•ïÈááÊëòÊûúÂÆû"

[node name="HybridFarm" type="VBoxContainer" parent="ScrollContainer/Grid"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="ScrollContainer/Grid/HybridFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.180392, 0.121569, 0.0745098, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 35
text = "üß¨ ÊùÇ‰∫§Âü∫Âú∞ üå±"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Grid/HybridFarm"]
layout_mode = 2
texture = ExtResource("1_mv0g4")

[node name="HybridFarmButton" type="Button" parent="ScrollContainer/Grid/HybridFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_Button_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_Button_Pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_Button_Normal")
text = "üî¨Á†îÁ©∂ÂüπËÇ≤"

[node name="LuckyFarm" type="VBoxContainer" parent="ScrollContainer/Grid"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="ScrollContainer/Grid/LuckyFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.180392, 0.121569, 0.0745098, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 35
text = "üçÄ Âπ∏ËøêÂÜúÂú∫ ‚ú®"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Grid/LuckyFarm"]
layout_mode = 2
texture = ExtResource("1_mv0g4")

[node name="LuckyFarmButton" type="Button" parent="ScrollContainer/Grid/LuckyFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_Button_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_Button_Pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_Button_Normal")
text = "üé≤ËØïËØïËøêÊ∞î"

[node name="RiceFarm" type="VBoxContainer" parent="ScrollContainer/Grid"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="ScrollContainer/Grid/RiceFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.180392, 0.121569, 0.0745098, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 35
text = "üåæ Á®ªÈ¶ôÁî∞Âõ≠ üçö"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Grid/RiceFarm"]
layout_mode = 2
texture = ExtResource("1_mv0g4")

[node name="RiceFarmButton" type="Button" parent="ScrollContainer/Grid/RiceFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_Button_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_Button_Pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_Button_Normal")
text = "üåæÊî∂Ââ≤Á®ªË∞∑"

[node name="WheatFarm" type="VBoxContainer" parent="ScrollContainer/Grid"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="ScrollContainer/Grid/WheatFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.180392, 0.121569, 0.0745098, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 35
text = "üåæ Â∞èÈ∫¶Ë∞∑ ü•ñ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Grid/WheatFarm"]
layout_mode = 2
texture = ExtResource("1_mv0g4")

[node name="WheatFarmButton" type="Button" parent="ScrollContainer/Grid/WheatFarm"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_Button_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_Button_Pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_Button_Normal")
text = "üåæÊî∂Ââ≤È∫¶Â≠ê"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ScrollContainer/Grid/FlowerFarm/FlowerFarmButton" to="." method="_on_flower_farm_button_pressed"]
[connection signal="pressed" from="ScrollContainer/Grid/FruitFarm/FruitFarmButton" to="." method="_on_fruit_farm_button_pressed"]
[connection signal="pressed" from="ScrollContainer/Grid/HybridFarm/HybridFarmButton" to="." method="_on_hybrid_farm_button_pressed"]
[connection signal="pressed" from="ScrollContainer/Grid/LuckyFarm/LuckyFarmButton" to="." method="_on_lucky_farm_button_pressed"]
[connection signal="pressed" from="ScrollContainer/Grid/RiceFarm/RiceFarmButton" to="." method="_on_rice_farm_button_pressed"]
[connection signal="pressed" from="ScrollContainer/Grid/WheatFarm/WheatFarmButton" to="." method="_on_wheat_farm_button_pressed"]
